force-app/main/default/objects/Loan_Product__c/Loan_Product__c.object-meta.xml
<CustomObject>
    <description>A template for a Loan that specifies the specifications and constraints that are then applied to the Loans (Investments) associated with the Loan Products. Each Loan has a required Loan Product.</description>
    <label>Loan Product</label>
    <nameField>
        <label>Loan Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>