force-app/main/default/objects/Loan_Product__c/fields/Available_for_Business_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Available_for_Business_Accounts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available for Business Accounts</label>
    <type>Checkbox</type>
</CustomField>