force-app/main/default/objects/Loan_Product__c/fields/CBO_Early_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>CBO_Early_Payment_Method__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Be Overridden On Loan</label>
    <type>Checkbox</type>
</CustomField>