force-app/main/default/objects/Loan_Product__c/fields/CBO_Late_Repayment_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>CBO_Late_Repayment_Interest_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Be Overridden On Loan</label>
    <type>Checkbox</type>
</CustomField>