force-app/main/default/objects/Loan_Product__c/fields/CBO_Open_Ended_Loan__c.field-meta.xml
<CustomField>
    <fullName>CBO_Open_Ended_Loan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Be Overridden On Loan</label>
    <type>Checkbox</type>
</CustomField>