force-app/main/default/objects/Loan_Product__c/fields/Day_Count_Convention__c.field-meta.xml
<CustomField>
    <fullName>Day_Count_Convention__c</fullName>
    <description>30/360 
This is a method that calculates interest based on assumed equal months (1/12th). 

Actual/365 
Calculate interest fees based on the number of days in the actual period. So if payments are monthly we charge between 28 and 31 days of interest, depending on the number of days in the month. 

Actual/365L 
Same as Actual/365 but for Leap years 366 days are used and not 365.</description>
    <label>Day Count Convention</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30/360</fullName>
            </value>
            <value>
                <fullName>Actual/365</fullName>
            </value>
            <value>
                <fullName>Actual/365L</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>