force-app/main/default/objects/Loan_Product__c/fields/Default_Arrears_Tolerance_Period_days__c.field-meta.xml
<CustomField>
    <fullName>Default_Arrears_Tolerance_Period_days__c</fullName>
    <label>Default Arrears Tolerance Period (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>