force-app/main/default/objects/Loan_Product__c/fields/Default_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Default_Interest_Rate__c</fullName>
    <label>Default Interest Rate</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>