force-app/main/default/objects/Loan_Product__c/fields/Default_Variable_Interest_Spread__c.field-meta.xml
<CustomField>
    <fullName>Default_Variable_Interest_Spread__c</fullName>
    <label>Default Variable Interest Spread</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>