force-app/main/default/objects/Loan_Product__c/fields/Disbursement_Method__c.field-meta.xml
<CustomField>
    <fullName>Disbursement_Method__c</fullName>
    <label>Disbursement Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full disbursement at start</fullName>
            </value>
            <value>
                <fullName>Tranched disbursement allowed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>