force-app/main/default/objects/Loan_Product__c/fields/Early_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Early_Payment_Method__c</fullName>
    <label>Early Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Only Interest Due To Date Charged</fullName>
            </value>
            <value>
                <fullName>Full Interest For Scheduled Periods Charged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>