force-app/main/default/objects/Loan_Product__c/fields/Grace_Period_Types__c.field-meta.xml
<CustomField>
    <fullName>Grace_Period_Types__c</fullName>
    <label>Grace Period Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Grace</fullName>
            </value>
            <value>
                <fullName>Pay Admin Fees Only</fullName>
            </value>
            <value>
                <fullName>Pay Interest Only</fullName>
            </value>
            <value>
                <fullName>Interest Rollup</fullName>
            </value>
            <value>
                <fullName>Full Grace</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>