force-app/main/default/objects/Loan_Product__c/fields/Interest_Rate_Review_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate_Review_Frequency__c</fullName>
    <description>This defines how often the variable interest rate will be considered.</description>
    <label>Interest Rate Review Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>