force-app/main/default/objects/Loan_Product__c/fields/Interest_Rate_Source__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate_Source__c</fullName>
    <label>Interest Rate Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Interest</fullName>
            </value>
            <value>
                <fullName>Variable Interest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>