force-app/main/default/objects/Loan_Product__c/fields/Interest_Reference_Rate__c.field-meta.xml
<CustomField>
    <fullName>Interest_Reference_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is required if ‘Variable Interest’ is selected</description>
    <label>Interest Reference Rate</label>
    <referenceTo>Interest_Rate_Source__c</referenceTo>
    <relationshipLabel>Loan Products</relationshipLabel>
    <relationshipName>Loan_Products</relationshipName>
    <type>Lookup</type>
</CustomField>