force-app/main/default/objects/Loan_Product__c/fields/Late_Repayment_Calculation_Method__c.field-meta.xml
<CustomField>
    <fullName>Late_Repayment_Calculation_Method__c</fullName>
    <description>No penalty - Won&#39;t charge penalties when a repayment is late
Overdue Principal * # of Late Days * Penalty Rate - it&#39;s the most common method, where the penalty rate is applied on the principal due late amount and the number of late days</description>
    <inlineHelpText>No penalty
Overdue Principal * # of Late Days * Penalty Rate : penalty rate applied on principal due late amount and number of late days
(Overdue Principal + Overdue Interest) * # of Late Days * Penalty Rate : same but with overdue interest</inlineHelpText>
    <label>Late Repayment Calculation Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Penalty</fullName>
            </value>
            <value>
                <fullName>Fixed Fee</fullName>
            </value>
            <value>
                <fullName>Overdue Principal * # of Late Days * Penalty Rate</fullName>
            </value>
            <value>
                <fullName>(Overdue Principal + Overdue Interest) * # of Late Days * Penalty Rate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>