force-app/main/default/objects/Loan_Product__c/fields/Maximum_Interest_Bandwidth__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Interest_Bandwidth__c</fullName>
    <label>Maximum Interest Bandwidth</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>