force-app/main/default/objects/Loan_Product__c/fields/Minimum_Arrears_Tolerance_Period__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Arrears_Tolerance_Period__c</fullName>
    <label>Minimum Arrears Tolerance Period (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>