force-app/main/default/objects/Loan_Product__c/fields/Minimum_Grace_Period__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Grace_Period__c</fullName>
    <label>Minimum Grace Period</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>