force-app/main/default/objects/Loan_Product__c/fields/Minimum_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Loan_Amount__c</fullName>
    <label>Minimum Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>