force-app/main/default/objects/Loan_Product__c/fields/Minimum_Monitoring_Fee_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Monitoring_Fee_Percentage__c</fullName>
    <label>Minimum Monitoring Fee Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>