force-app/main/default/objects/Loan_Product__c/fields/Minimum_number_of_installments__c.field-meta.xml
<CustomField>
    <fullName>Minimum_number_of_installments__c</fullName>
    <label>Minimum Number of Instalments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>