force-app/main/default/objects/Loan_Product__c/fields/Open_Ended_Loan__c.field-meta.xml
<CustomField>
    <fullName>Open_Ended_Loan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Open Ended Loan</label>
    <type>Checkbox</type>
</CustomField>