force-app/main/default/objects/Loan_Product__c/fields/Repayment_Allocation_Order__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Allocation_Order__c</fullName>
    <description>This field determines what (Principal, Interest, Fees or Late Repayment Fees) will be paid first out of transactions.</description>
    <label>Repayment Allocation Order</label>
    <length>80</length>
    <type>Text</type>
</CustomField>