force-app/main/default/objects/Loan_Product__c/fields/Repayment_Allocation_Type__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Allocation_Type__c</fullName>
    <label>Repayment Allocation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Loan-based</fullName>
            </value>
            <value>
                <fullName>Schedule-based</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>