force-app/main/default/objects/Loan_Product__c/fields/Repayment_Frequency_Unit__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Frequency_Unit__c</fullName>
    <label>Repayment Frequency Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Days</fullName>
            </value>
            <value>
                <fullName>Weeks</fullName>
            </value>
            <value>
                <fullName>Months</fullName>
            </value>
            <value>
                <fullName>Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>