force-app/main/default/objects/Loan_Product__c/fields/Setup_Fee_Charging_Method__c.field-meta.xml
<CustomField>
    <fullName>Setup_Fee_Charging_Method__c</fullName>
    <label>Setup Fee Charging Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Setup Fee</fullName>
            </value>
            <value>
                <fullName>Paid Up Front (manual)</fullName>
            </value>
            <value>
                <fullName>Paid Up Front (scheduled)</fullName>
            </value>
            <value>
                <fullName>Capitalized</fullName>
            </value>
            <value>
                <fullName>Deducted From Principal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>