force-app/main/default/objects/Loan_Product__c/validationRules/Can_Be_Overridden_On_Loan_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_Be_Overridden_On_Loan_Amount</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!$Setup.Validation_Settings__c.Disable_Validation_Rules_on_Loan_Product__c, !CBO_Default_Loan_Amount__c, ISBLANK( Default_Loan_Amount__c))</errorConditionFormula>
    <errorDisplayField>Default_Loan_Amount__c</errorDisplayField>
    <errorMessage>Complete this field or check Can Be Overridden on Loan (Default Loan Amount)</errorMessage>
</ValidationRule>