force-app/main/default/objects/Loan_Product__c/validationRules/Can_Be_Overridden_On_Loan_Day_Count_Conv.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_Be_Overridden_On_Loan_Day_Count_Conv</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!$Setup.Validation_Settings__c.Disable_Validation_Rules_on_Loan_Product__c, !CBO_Day_Count_Convention__c, ISBLANK(TEXT(Day_Count_Convention__c)))</errorConditionFormula>
    <errorDisplayField>Day_Count_Convention__c</errorDisplayField>
    <errorMessage>Complete this field or check Can Be Overridden on Loan (Day Count Convention)</errorMessage>
</ValidationRule>