force-app/main/default/objects/Loan_Product__c/validationRules/Can_Be_Overridden_On_Loan_DisburseMethod.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_Be_Overridden_On_Loan_DisburseMethod</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!$Setup.Validation_Settings__c.Disable_Validation_Rules_on_Loan_Product__c, !CBO_Disbursement_Method__c, ISBLANK(TEXT(Disbursement_Method__c)))</errorConditionFormula>
    <errorDisplayField>Disbursement_Method__c</errorDisplayField>
    <errorMessage>Complete this field or check Can Be Overridden on Loan (Disbursement Method)</errorMessage>
</ValidationRule>