force-app/main/default/objects/Loan_Product__c/validationRules/Can_Be_Overridden_On_Loan_Early_Payment.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_Be_Overridden_On_Loan_Early_Payment</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!$Setup.Validation_Settings__c.Disable_Validation_Rules_on_Loan_Product__c, !CBO_Early_Payment_Method__c, ISBLANK(TEXT(Early_Payment_Method__c)))</errorConditionFormula>
    <errorDisplayField>Early_Payment_Method__c</errorDisplayField>
    <errorMessage>Complete this field or check Can Be Overridden on Loan (Early Payment Method)</errorMessage>
</ValidationRule>