force-app/main/default/objects/Loan_Product__c/validationRules/Can_Be_Overridden_On_Loan_Fee_Method.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_Be_Overridden_On_Loan_Fee_Method</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!$Setup.Validation_Settings__c.Disable_Validation_Rules_on_Loan_Product__c, !CBO_Setup_Fee_Charging_Method__c, ISBLANK(TEXT(Setup_Fee_Charging_Method__c)))</errorConditionFormula>
    <errorDisplayField>Setup_Fee_Charging_Method__c</errorDisplayField>
    <errorMessage>Complete this field or check Can Be Overridden on Loan (Setup Fee Charging Method)</errorMessage>
</ValidationRule>