force-app/main/default/objects/Loan_Product__c/validationRules/Can_Be_Overridden_On_Loan_Flat_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_Be_Overridden_On_Loan_Flat_Amount</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!$Setup.Validation_Settings__c.Disable_Validation_Rules_on_Loan_Product__c, OR(TEXT(Setup_Fee__c) == &#39;Flat Amount&#39;, AND(TEXT(Setup_Fee__c) == &#39;% of Disbursement Amount&#39;, CBO_Setup_Fee__c)), !CBO_Flat_Amount__c, ISBLANK(Flat_Amount__c))</errorConditionFormula>
    <errorDisplayField>Flat_Amount__c</errorDisplayField>
    <errorMessage>Complete this field or check Can Be Overridden on Loan (Flat Amount)</errorMessage>
</ValidationRule>