force-app/main/default/objects/Loan_Product__c/validationRules/Can_Be_Overridden_On_Loan_Frequency.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_Be_Overridden_On_Loan_Frequency</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!$Setup.Validation_Settings__c.Disable_Validation_Rules_on_Loan_Product__c, !CBO_Repayment_Frequency__c, ISBLANK( Repayment_Frequency__c))</errorConditionFormula>
    <errorDisplayField>Repayment_Frequency__c</errorDisplayField>
    <errorMessage>Complete this field or check Can Be Overridden on Loan (Repayment Frequency)</errorMessage>
</ValidationRule>