force-app/main/default/objects/Loan_Product__c/validationRules/Can_Be_Overridden_On_Loan_Frequency_Unit.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_Be_Overridden_On_Loan_Frequency_Unit</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!$Setup.Validation_Settings__c.Disable_Validation_Rules_on_Loan_Product__c, !CBO_Repayment_Frequency_Unit__c, ISBLANK( TEXT(Repayment_Frequency_Unit__c)))</errorConditionFormula>
    <errorDisplayField>Repayment_Frequency_Unit__c</errorDisplayField>
    <errorMessage>Complete this field or check Can Be Overridden on Loan (Repayment Frequency Unit)</errorMessage>
</ValidationRule>