force-app/main/default/objects/Loan_Product__c/validationRules/Can_Be_Overridden_On_Loan_Installments.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_Be_Overridden_On_Loan_Installments</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!$Setup.Validation_Settings__c.Disable_Validation_Rules_on_Loan_Product__c, !CBO_Default_number_of_installments__c, ISBLANK(Default_number_of_installments__c))</errorConditionFormula>
    <errorDisplayField>Default_number_of_installments__c</errorDisplayField>
    <errorMessage>Complete this field or check Can Be Overridden on Loan (Default Number of Instalments)</errorMessage>
</ValidationRule>