force-app/main/default/objects/Loan_Product__c/validationRules/Can_Be_Overridden_On_Loan_Interest_Rate.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_Be_Overridden_On_Loan_Interest_Rate</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!$Setup.Validation_Settings__c.Disable_Validation_Rules_on_Loan_Product__c, TEXT(Interest_Rate_Source__c) == &#39;Fixed Interest&#39;, !CBO_Default_Interest_Rate__c, ISBLANK(Default_Interest_Rate__c))</errorConditionFormula>
    <errorDisplayField>Default_Interest_Rate__c</errorDisplayField>
    <errorMessage>Complete this field or check Can Be Overridden on Loan (Default Interest Rate)</errorMessage>
</ValidationRule>