force-app/main/default/objects/Loan_Product__c/validationRules/Can_Be_Overridden_On_Loan_InterestSpread.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_Be_Overridden_On_Loan_InterestSpread</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!$Setup.Validation_Settings__c.Disable_Validation_Rules_on_Loan_Product__c, TEXT(Interest_Rate_Source__c) == &#39;Variable Interest&#39;, !CBO_Default_Variable_Interest_Spread__c, ISBLANK(Default_Variable_Interest_Spread__c))</errorConditionFormula>
    <errorDisplayField>Default_Variable_Interest_Spread__c</errorDisplayField>
    <errorMessage>Complete this field or check Can Be Overridden on Loan (Default Variable Interest Spread)</errorMessage>
</ValidationRule>