force-app/main/default/objects/Loan_Product__c/validationRules/Can_Be_Overridden_On_Loan_Late_Method.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_Be_Overridden_On_Loan_Late_Method</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!$Setup.Validation_Settings__c.Disable_Validation_Rules_on_Loan_Product__c, !CBO_Late_Repayment_Calculation_Method__c, ISBLANK(TEXT(Late_Repayment_Calculation_Method__c)))</errorConditionFormula>
    <errorDisplayField>Late_Repayment_Calculation_Method__c</errorDisplayField>
    <errorMessage>Complete this field or check Can Be Overridden on Loan (Late Repayment Calculation Method)</errorMessage>
</ValidationRule>