force-app/main/default/objects/Loan_Product__c/validationRules/Can_Be_Overridden_On_Loan_Late_Period.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_Be_Overridden_On_Loan_Late_Period</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!$Setup.Validation_Settings__c.Disable_Validation_Rules_on_Loan_Product__c, TEXT(Late_Repayment_Calculation_Method__c) != &#39;No Penalty&#39;, !CBO_Late_Repayment_Tolerance_Period__c, ISBLANK(Default_Arrears_Tolerance_Period_days__c))</errorConditionFormula>
    <errorDisplayField>Default_Arrears_Tolerance_Period_days__c</errorDisplayField>
    <errorMessage>Complete this field or check Can Be Overridden on Loan (Default Arrears Tolerance Period (days))</errorMessage>
</ValidationRule>